# kabibe

./: CMakeLists.txt  README.md
include/kabibe/: kabibe.h  kabibe.hh  types.h
include/kabibe/arch/: x86_64.h  x86_64.hh
src/: kabibe.c  kabibe.cc  x86_64.c  x86_64.cc
